# K-AIKO

./: .gitignore  K-AIKO.py  LICENSE  MANIFEST.in  README.md  README.rst  beatmap.py  beatsheet.py  cfg.py  debug_config  default.kconfig  environment.yml  game.py  knock.py  knock_analysis.ipynb  pyaudio_loopback.ipynb  realtime_analysis.ipynb  realtime_analysis.py  realtime_loopback.ipynb  realtime_spectrogram.py  setup.cfg  setup.py  test.py  蛋餅好朋友 [normal].k-aiko  蛋餅好朋友 [normal].ka  蛋餅好朋友 [normal].kaiko  蛋餅好朋友.ka
kaiko/: __main__.py  beatanalyzer.py  beatbar.py  beatcmd.py  beatmap.py  beatmaps.py  beatmenu.py  beatsheet.py  beatsheets.py  beatshell.py  biparser.py  biparsers.py  cfg.py  commands.py  config.py  datanodes.py  engines.py  kerminal.py  knock.py  realtime_analysis.py  tui.py  wcbuffers.py
kaiko/beats/: beatanalyzer.py  beatbar.py  beatinputs.py  beatmaps.py  beatpatterns.py  beatsheets.py  beatshell.py  beatwidgets.py
kaiko/devices/: audios.py  clocks.py  engines.py  loggers.py  terminals.py
kaiko/main/: __init__.py  beatshell.py  bgm.py  devices.py  files.py  launcher.py  loggers.py  menu.py  play.py  profiles.py  settings.py  songs.py
kaiko/menu/: beatmenu.py  devices.py  logger.py  profiles.py  songs.py
kaiko/tui/: beatbars.py  beatshell.py  inputs.py  sheditors.py  shells.py  textboxes.py  widgets.py
kaiko/utils/: audios.py  biparsers.py  commands.py  config.py  datanodes.py  engines.py  formattec.py  loggers.py  markups.py  parsec.py  providers.py  sequences.py  serializers.py  shells.py  terminals.py  wcbuffers.py
study/: pyaudio_loopback.ipynb  realtime_analysis.ipynb
tests/: 蛋餅好朋友 [normal].k-aiko
