[metadata]
name = K-AIKO
author = worldmaker18349276
author_email = worldmaker18349276@gmail.com
version = attr: kaiko.__version__
description = A voice-controlled terminal-based rhythm game
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = voice-controlled, terminal-based, rhythm game
license = MIT
home_page = https://github.com/worldmaker18349276/K-AIKO
project_urls =
    Issue Tracker = https://github.com/worldmaker18349276/K-AIKO/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: End Users/Desktop
    Topic :: Games/Entertainment
    License :: OSI Approved :: MIT License
    Environment :: Console
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.6, <4
include_package_data = true
install_requires =
    dataclasses; python_version < "3.7"
    lark
    numpy
    scipy
    audioread
    pyaudio
    wcwidth
    psutil
    appdirs

[options.entry_points]
console_scripts =
    kaiko = kaiko.__main__:main
